// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pwngoal copy will auto-suggest terms 1`] = `
"[33m[39m
[33m ┌─────────┐[39m
 [33m│[39m [33moops...[39m [33m│[39m
[33m └─────────┘[39m
    ↳ Did you mean [32m[1mcopy spawn a TTY shell (linux)[22m[39m?

      [2mPress [22m[1mENTER[22m[2m to continue[22m
"
`;

exports[`pwngoal copy will prompt for term when not provided 1`] = `
"
 [36mCopy one-line reverse shell written in [1m[33mPython[36m[22m[39m

 [36m[1m→[22m[39m [39m[36m[1mreverse shell (python)[22m[39m[39m
   reverse shell (php)
   reverse shell (perl)
   reverse shell (ruby)
   reverse shell (bash)
   reverse shell (awk)
   spawn a TTY shell (linux)
   find files/folders with write access (linux)
"
`;

exports[`pwngoal scan will auto-suggest terms 1`] = `
"[33m[39m
[33m ┌─────────┐[39m
 [33m│[39m [33moops...[39m [33m│[39m
[33m └─────────┘[39m
    ↳ Did you mean [32m[1mscan ports[22m[39m?

      [2mPress [22m[1mENTER[22m[2m to continue[22m
"
`;

exports[`pwngoal scan will prompt for term when not provided 1`] = `
"
 [36mScan a port with nmap[39m

 [36m[1m→[22m[39m [39m[36m[1mport[22m[39m[39m
   ports
"
`;

exports[`pwngoal show --ip doesNotExist 1`] = `
"
 No results for [31m[1mdoesNotExist[22m[39m"
`;

exports[`pwngoal show -i 127.0.0.1 1`] = `
"[36m┌───────────┐[39m
[36m│[39m [36m[1m127.0.0.1[22m[39m [36m│[39m
[36m└───────────┘[39m
[1m[37m┌[39m[22m[1m[37m──────────[39m[22m[1m[37m┬[39m[22m[1m[37m───────[39m[22m[1m[37m┬[39m[22m[1m[37m─────────[39m[22m[1m[37m┬[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┐[39m[22m
[1m[37m│[39m[22m[1m[34m protocol [39m[22m[1m[37m│[39m[22m[1m[34m port  [39m[22m[1m[37m│[39m[22m[1m[34m service [39m[22m[1m[37m│[39m[22m[1m[34m version                    [39m[22m[1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 21    [1m[37m│[39m[22m ftp     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 22    [1m[37m│[39m[22m ssh     [1m[37m│[39m[22m OpenSSH 7.8 (protocol 2.0) [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 25    [1m[37m│[39m[22m smtp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 53    [1m[37m│[39m[22m dns     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 110   [1m[37m│[39m[22m pop3    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 135   [1m[37m│[39m[22m msrpc   [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 143   [1m[37m│[39m[22m imap    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 161   [1m[37m│[39m[22m snmp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 443   [1m[37m│[39m[22m https   [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 445   [1m[37m│[39m[22m smb     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 631   [1m[37m│[39m[22m ipp     [1m[37m│[39m[22m CUPS 2.2                   [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 1521  [1m[37m│[39m[22m oracle  [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 17600 [1m[37m│[39m[22m http    [1m[37m│[39m[22m Tornado httpd 4.2          [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 45295 [1m[37m│[39m[22m[31m[1m ERROR   [22m[39m[1m[37m│[39m[22m[31m[1m ERROR                      [22m[39m[1m[37m│[39m[22m
[1m[37m└[39m[22m[1m[37m──────────[39m[22m[1m[37m┴[39m[22m[1m[37m───────[39m[22m[1m[37m┴[39m[22m[1m[37m─────────[39m[22m[1m[37m┴[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┘[39m[22m
 ↳ [2mTry \\"pwngoal suggest\\" to get some suggestions on what to do next[22m

"
`;

exports[`pwngoal show 127.0.0.1 1`] = `
"[36m┌───────────┐[39m
[36m│[39m [36m[1m127.0.0.1[22m[39m [36m│[39m
[36m└───────────┘[39m
[1m[37m┌[39m[22m[1m[37m──────────[39m[22m[1m[37m┬[39m[22m[1m[37m───────[39m[22m[1m[37m┬[39m[22m[1m[37m─────────[39m[22m[1m[37m┬[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┐[39m[22m
[1m[37m│[39m[22m[1m[34m protocol [39m[22m[1m[37m│[39m[22m[1m[34m port  [39m[22m[1m[37m│[39m[22m[1m[34m service [39m[22m[1m[37m│[39m[22m[1m[34m version                    [39m[22m[1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 21    [1m[37m│[39m[22m ftp     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 22    [1m[37m│[39m[22m ssh     [1m[37m│[39m[22m OpenSSH 7.8 (protocol 2.0) [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 25    [1m[37m│[39m[22m smtp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 53    [1m[37m│[39m[22m dns     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 110   [1m[37m│[39m[22m pop3    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 135   [1m[37m│[39m[22m msrpc   [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 143   [1m[37m│[39m[22m imap    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 161   [1m[37m│[39m[22m snmp    [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 443   [1m[37m│[39m[22m https   [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 445   [1m[37m│[39m[22m smb     [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 631   [1m[37m│[39m[22m ipp     [1m[37m│[39m[22m CUPS 2.2                   [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 1521  [1m[37m│[39m[22m oracle  [1m[37m│[39m[22m ???                        [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 17600 [1m[37m│[39m[22m http    [1m[37m│[39m[22m Tornado httpd 4.2          [1m[37m│[39m[22m
[1m[37m├[39m[22m[1m[37m──────────[39m[22m[1m[37m┼[39m[22m[1m[37m───────[39m[22m[1m[37m┼[39m[22m[1m[37m─────────[39m[22m[1m[37m┼[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┤[39m[22m
[1m[37m│[39m[22m tcp      [1m[37m│[39m[22m 45295 [1m[37m│[39m[22m[31m[1m ERROR   [22m[39m[1m[37m│[39m[22m[31m[1m ERROR                      [22m[39m[1m[37m│[39m[22m
[1m[37m└[39m[22m[1m[37m──────────[39m[22m[1m[37m┴[39m[22m[1m[37m───────[39m[22m[1m[37m┴[39m[22m[1m[37m─────────[39m[22m[1m[37m┴[39m[22m[1m[37m────────────────────────────[39m[22m[1m[37m┘[39m[22m
 ↳ [2mTry \\"pwngoal suggest\\" to get some suggestions on what to do next[22m

"
`;

exports[`pwngoal show doesNotExist 1`] = `
"
 No results for [31m[1mdoesNotExist[22m[39m"
`;

exports[`pwngoal show ipPassedAsTerm --ip doesNotExist 1`] = `
"
 No results for [31m[1mipPassedAsTerm[22m[39m"
`;

exports[`pwngoal show will render with no terms or options 1`] = `
"
 [36mShow scan results for 10.11.0.1[39m

 [36m[1m→[22m[39m [39m[36m[1m10.11.0.1[22m[39m[39m
   127.0.0.1
   192.2.1.41
   192.168.1.42
"
`;

exports[`pwngoal suggest can display suggestions for various services 1`] = `
"[34m┌────────┐[39m
[34m│[39m domain [34m│[39m
[34m└────────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mPerform a \\"standard\\" scan and brute force hostnames with a dictionary[22m
   [2m[34m↳[39m[22m [1m[32mdnsrecon[39m[22m -d [1m[36m$RHOST[39m[22m -D /usr/share/wordlists/dnsmap.txt -t std

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate DNS information with dnsenum[22m
   [2m[34m↳[39m[22m [1m[32mdnsenum[39m[22m [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan for vulnerabilties with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m --script \\"dns-*\\"

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 2`] = `
"[34m┌─────┐[39m
[34m│[39m ftp [34m│[39m
[34m└─────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mCheck for anonymous login (username: \\"anonymous\\", password: <nothing>)[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script ftp-anon
"
`;

exports[`pwngoal suggest can display suggestions for various services 3`] = `
"[34m┌──────┐[39m
[34m│[39m http [34m│[39m
[34m└──────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan web site for vulnerabilties with nikto[22m
   [2m[34m↳[39m[22m [1m[32mnikto[39m[22m -host [1m[36m$RHOST[39m[22m -port [1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan web server directories with gobuster[22m
   [2m[34m↳[39m[22m [1m[32mgobuster[39m[22m dir -w [1m[36m/path/to/wordlist[39m[22m -u http://[1m[36m$RHOST[39m[22m:[1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan web server directories with dirb[22m
   [2m[34m↳[39m[22m [1m[32mdirb[39m[22m http://[1m[36m$RHOST[39m[22m [1m[36m/path/to/wordlist[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mPerform a \\"quicklook\\" at the website content in your terminal[22m
   [2m[34m↳[39m[22m [1m[32mcurl[39m[22m -s http://[1m[36m$RHOST[39m[22m:[1m[36m$RPORT[39m[22m | [1m[32mhtml2text[39m[22m -style pretty

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mView colorized header data and website content with httpie[22m
   [2m[34m↳[39m[22m [1m[32mhttp[39m[22m [1m[36m$RHOST[39m[22m:[1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mFingerprint web server with whatweb[22m
   [2m[34m↳[39m[22m [1m[32mwhatweb[39m[22m -a 3 [1m[36m$RHOST[39m[22m:[1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mTake screenshot of server web page and identify default credentials with EyeWitness[22m
   [2m[34m↳[39m[22m [1m[32m./EyeWitness.py[39m[22m -f [1m[36m/path/to/hosts[39m[22m
     [1m[32m./EyeWitness.py[39m[22m --single [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mBrute force .htaccess directory with medusa[22m
   [2m[34m↳[39m[22m [1m[32mmedusa[39m[22m -h [1m[36m$RHOST[39m[22m -u [1m[36muser[39m[22m -P [1m[36m/path/to/passwords[39m[22m -M http -m DIR:/[1m[36mdirectory[39m[22m -T 10

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mBrute force Wordpress login page with hydra[22m
   [2m[34m↳[39m[22m [1m[32mhydra[39m[22m -l [1m[36muser[39m[22m -P [1m[36m/path/to/passwords[39m[22m [1m[36m$RHOST[39m[22m -V http-form-post '/wp-login.php:[1m[36mPOST header with ^USER^ and ^PASS^[39m[22m:F=login_error'

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mDetect WebDAV installations[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script http-webdav-scan

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan for an IIS 5.1/6.0 WebDAV vulnerability[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script http-iis-webdav-vuln

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mDetermine if enabled DAV services are exploitable[22m
   [2m[34m↳[39m[22m [1m[32mdavtest[39m[22m -url http://[1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate Wordpress site with wpscan[22m
   [2m[34m↳[39m[22m [1m[32mwpscan[39m[22m --url http://[1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate Drupal site with droopescan[22m
   [2m[34m↳[39m[22m [1m[32mdroopescan[39m[22m scan -u [1m[36m$RHOST[39m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 4`] = `
"[34m┌───────┐[39m
[34m│[39m msrpc [34m│[39m
[34m└───────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate shares with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m --script msrpc-enum
"
`;

exports[`pwngoal suggest can display suggestions for various services 5`] = `
"[34m┌─────┐[39m
[34m│[39m nfs [34m│[39m
[34m└─────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate NFS with rpcinfo[22m
   [2m[34m↳[39m[22m [1m[32mrpcinfo[39m[22m -p [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mShow server's export list[22m
   [2m[34m↳[39m[22m [1m[32mshowmount[39m[22m -a [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mRun nmap scripts[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m --script \\"nfs-*\\"

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 6`] = `
"[34m┌─────────────┐[39m
[34m│[39m netbios-ssn [34m│[39m
[34m└─────────────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate SMB users with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script smb-enum-users

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate SMB shares with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script smb-enum-shares

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate with enum4linux[22m
   [2m[34m↳[39m[22m [1m[32menum4linux[39m[22m -a [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mList shares and connect to one[22m
   [2m[34m↳[39m[22m [1m[32msmbclient[39m[22m -U [1m[36muser[39m[22m -L [1m[36m//$RHOST[39m[22m
     [1m[32msmbclient[39m[22m -U [1m[36muser[39m[22m [1m[36m//$RHOST/path/to/share[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mAttempt null connect[22m
   [2m[34m↳[39m[22m [1m[32mrpcclient[39m[22m -U \\"\\" [1m[36m$RHOST[39m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 7`] = `
"[34m┌────────┐[39m
[34m│[39m oracle [34m│[39m
[34m└────────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate server information with oscanner[22m
   [2m[34m↳[39m[22m [1m[32moscanner[39m[22m -s [1m[36m$RHOST[39m[22m -P [1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mGet information from the Oracle TNS listener[22m
   [2m[34m↳[39m[22m [1m[32mtnscmd10g[39m[22m version -h [1m[36m$RHOST[39m[22m

     [1mNOTE[22m [1m[2m→[1m[22m [2mthe default port is 1521/tcp[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mBrute force the SID with hydra[22m
   [2m[34m↳[39m[22m [1m[32mhydra[39m[22m -L /usr/share/oscanner/lib/services.txt -s 1521 [1m[36m$RHOST[39m[22m oracle-sid

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mRun nmap scans[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m --script oracle-enum-users

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 8`] = `
"[34m┌──────┐[39m
[34m│[39m smtp [34m│[39m
[34m└──────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mCheck for available SMTP commands[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script smtp-commands

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate users with smtp-enum-users and various SMTP commands (VRFY, EXPN, RCPT, etc...)[22m
   [2m[34m↳[39m[22m [1m[32msmtp-user-enum[39m[22m -M [1m[36mCOMMAND[39m[22m -U [1m[36m/path/to/users[39m[22m -t [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan for vulnerabilties with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m --script \\"smtp-vuln-*\\"

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 9`] = `
"[34m┌──────┐[39m
[34m│[39m snmp [34m│[39m
[34m└──────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mBrute force community strings[22m
   [2m[34m↳[39m[22m [1m[32monesixtyone[39m[22m -i [1m[36m/path/to/hosts[39m[22m -c [1m[36m/path/to/strings[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate with snmp-check[22m
   [2m[34m↳[39m[22m [1m[32msnmp-check[39m[22m [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate Windows information with snmpwalk[22m
   [2m[34m↳[39m[22m [1m[32msnmpwalk[39m[22m -c [1m[36mcommunity[39m[22m -v1 [1m[36m$RHOST[39m[22m [1m[36moid[39m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 10`] = `
"[34m┌─────┐[39m
[34m│[39m ssh [34m│[39m
[34m└─────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mBrute force login password with hydra[22m
   [2m[34m↳[39m[22m [1m[32mhydra[39m[22m -l [1m[36muser[39m[22m -P [1m[36m/path/to/password/list[39m[22m -f -V [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mSearch for exploits that apply to the SSH server version[22m
   [2m[34m↳[39m[22m [1m[32msearchsploit[39m[22m [1m[36mversion[39m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 11`] = `
"[34m┌──────────┐[39m
[34m│[39m ssl/http [34m│[39m
[34m└──────────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate configuration, check for heartbleed vulnerability, and determine supported ciphers with sslscan[22m
   [2m[34m↳[39m[22m [1m[32msslscan[39m[22m [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEvaluate the web server SSL/TLS (HTTPS) security with tlssled[22m
   [2m[34m↳[39m[22m [1m[32mtlssled[39m[22m [1m[36m$RHOST[39m[22m [1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mAnalyze server SSL configuration with \\"regular\\" sslyze scan[22m
   [2m[34m↳[39m[22m [1m[32msslyze[39m[22m --regular [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate SSL ciphers with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script ssl-enum-ciphers

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 12`] = `
"[34m┌─────┐[39m
[34m│[39m dns [34m│[39m
[34m└─────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mPerform a \\"standard\\" scan and brute force hostnames with a dictionary[22m
   [2m[34m↳[39m[22m [1m[32mdnsrecon[39m[22m -d [1m[36m$RHOST[39m[22m -D /usr/share/wordlists/dnsmap.txt -t std

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate DNS information with dnsenum[22m
   [2m[34m↳[39m[22m [1m[32mdnsenum[39m[22m [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mScan for vulnerabilties with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m --script \\"dns-*\\"

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 13`] = `
"[34m┌─────┐[39m
[34m│[39m smb [34m│[39m
[34m└─────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate SMB users with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script smb-enum-users

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate SMB shares with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script smb-enum-shares

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate with enum4linux[22m
   [2m[34m↳[39m[22m [1m[32menum4linux[39m[22m -a [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mList shares and connect to one[22m
   [2m[34m↳[39m[22m [1m[32msmbclient[39m[22m -U [1m[36muser[39m[22m -L [1m[36m//$RHOST[39m[22m
     [1m[32msmbclient[39m[22m -U [1m[36muser[39m[22m [1m[36m//$RHOST/path/to/share[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mAttempt null connect[22m
   [2m[34m↳[39m[22m [1m[32mrpcclient[39m[22m -U \\"\\" [1m[36m$RHOST[39m[22m
"
`;

exports[`pwngoal suggest can display suggestions for various services 14`] = `
"[34m┌───────┐[39m
[34m│[39m https [34m│[39m
[34m└───────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate configuration, check for heartbleed vulnerability, and determine supported ciphers with sslscan[22m
   [2m[34m↳[39m[22m [1m[32msslscan[39m[22m [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEvaluate the web server SSL/TLS (HTTPS) security with tlssled[22m
   [2m[34m↳[39m[22m [1m[32mtlssled[39m[22m [1m[36m$RHOST[39m[22m [1m[36m$RPORT[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mAnalyze server SSL configuration with \\"regular\\" sslyze scan[22m
   [2m[34m↳[39m[22m [1m[32msslyze[39m[22m --regular [1m[36m$RHOST[39m[22m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mEnumerate SSL ciphers with nmap[22m
   [2m[34m↳[39m[22m [1m[32mnmap[39m[22m [1m[36m$RHOST[39m[22m -p [1m[36m$RPORT[39m[22m --script ssl-enum-ciphers

     [1m[35mTIP[39m[22m [1m[35m→[39m[22m [2mfind other NSE scripts with [1mgibu /usr/share/nmap/scripts -fr[2m[22m
"
`;

exports[`pwngoal suggest can handle services with no suggestions 1`] = `
"[34m┌────────────────┐[39m
[34m│[39m does-not-exist [34m│[39m
[34m└────────────────┘[39m

 [1m[34mTRY[39m[22m [2m[34m→[39m[22m [2mSorry, no suggestions for [1mdoes-not-exist[2m...[22m
   [2m[34m↳[39m[22m Don't forget to [1m[35mTRY HARDER![39m[22m You can do it!
"
`;

exports[`pwngoal suggest will display service select menu when passed IP term 1`] = `
"
 [36mShow suggestions for ftp[39m

 [36m[1m→[22m[39m [39m[36m[1mftp[22m[39m[39m
   ssh
   smtp
   dns
   pop3
   msrpc
   imap
   snmp
   https
   smb
   ipp
   oracle
   http
"
`;

exports[`pwngoal suggest will render with no terms or options 1`] = `
"
 [36mSelect service for 10.11.0.1[39m

 [36m[1m→[22m[39m [39m[36m[1m10.11.0.1[22m[39m[39m
   127.0.0.1
   192.2.1.41
   192.168.1.42
"
`;
